--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-remark-twitch",
-  "version": "0.0.1",
-  "description": "Embed Twitch videos/clips/channels in Gatsby using just an url",
+  "name": "@weknow/gatsby-remark-twitch",
+  "version": "0.1.0",
+  "description": "Embed Twitch videos/clips/channels in Gatsby markdown",
   "main": "index.js",
   "author": "Jairo Rondon <jrondon@anexusit.com>",
   "license": "MIT",
-  "keywords": ["gatsby", "gatsby-plugin", "remark", "twitch"],
+  "keywords": ["gatsby", "gatsby-plugin", "remark", "markdown", "twitch"],
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "unist-util-visit": "^1.1.3"
@@ -15,14 +15,9 @@
     "cross-env": "^5.0.5",
     "unist-util-map": "^1.0.3"
   },
-  "scripts": {
-    "build": "babel src --out-dir .",
-    "prepublish": "cross-env NODE_ENV=production npm run build",
-    "watch": "babel -w src --out-dir ."
-  },
-  "homepage": "https://github.com/weknow/gatsby-remark-twitter#readme",
+  "homepage": "https://github.com/weknowinc/gatsby-remark-twitter#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/weknow/gatsby-remark-twitter.git"
+    "url": "git+https://github.com/weknowinc/gatsby-remark-twitter.git"
   }
 }
